problems of display items in cart
