# src/app/services/product/models/product.ts
@@ -13,6 +13,7 @@ export interface Product {
   colour?: string;
   description?: string;
   productId?: number;
+  productImageUrl?: string;
   productName?: string;
   productSize?: string;
   quantity?: number;
